// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render if not open 1`] = `<DocumentFragment />`;

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans hGJZle absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxiKw kgmJgX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-fznKkj bhWxzE"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span />
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2"
              >
                <div
                  aria-label="ARK Devnet"
                  class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-AxiKw dklFyP"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt=""
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm fCKjFI w-full mt-8 mb-2"
              color="primary"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="mt-8"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans hGJZle absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxiKw kgmJgX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-fznKkj bhWxzE"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Name
                </div>
                <div
                  class="font-semibold"
                >
                  My Wallet
                </div>
              </div>
              <div
                aria-label="ARK Devnet"
                class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-fznKkj bhWxzE"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      abc
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm fCKjFI w-full mt-8 mb-2"
              color="primary"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 mx-auto"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAASwSURBVO3BAWolBxQDwX7C97+ykgMk4AEP+63tqgOKfkxbnrg7nmjLW+6OJ9ryprtDPyNImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmffFQW/4md8ffoi1P3B1PtOVNbfmb3B3fFSTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfO+eNnd8Unaov92dzzRlt/s7vgkbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzftCf1Rb3nR3fFdbtClImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmfaE/6u54oi1vuTve1Bb9GUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDTvi5e1Rf+vLW9qi/5bW/4WQdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNO+Lh+4O/Zy744m2PHF3fFdbnrg7nmjLm+4O/bcgaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iad/0XkqYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvAPKA215092h/9eWJ+6Ot7Tlibvjiba86e54oi1P3B2fIkiaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuZ98bK745O05U13x5vujifa8l13xxN3h/6ctnxXkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzTug6Me05be6O97UljfdHU+05Ym744m2PHF3vCVImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNu/6LD3J3fJK2vOnueFNb3nJ3/GZtedPd8aa2fFeQNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTN++Khu+OJtnyStjxxdzzRlifa8sTd8Za7429yd7ypLU/cHU/cHd8VJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ867/Qn/M3fFEW564O76rLU/cHZ+kLU/cHU+05U13xxNt+a4gaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iad0DRj2nLE3fHE215y93xRFt+s7vjTW35FEHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDTvgPJAW/4md8cTbXni7nhTW36ru+OJtnySu+NNbfmuIGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImvfFy+6OT9KW36wtv9Xd8aa744m2vKktT9wdT9wd3xUkzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzvtCvcne8pS1P3B2fpC1vujueaMsTbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzftCf1Rbnrg73nJ3fJK2vOnu+CR3x1uCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBp3hcva4t+Tlvecne8qS1vujueaMsTd8cTd8enCJLmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHkHFP2YtjxxdzzRlk9xd7ypLU/cHW9qy28VJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5v0DzxHx73yJDcQAAAAASUVORK5CYII="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-auto"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-fzpans hGJZle absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm cGlMcw w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxiKw kgmJgX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-fznKkj bhWxzE"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      abc
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxiKw dzBdqj"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2"
              >
                <div
                  aria-label="ARK Devnet"
                  class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-AxiKw dklFyP"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxjAm fCKjFI w-full mt-8 mb-2"
              color="primary"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 mx-auto"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAASwSURBVO3BAWolBxQDwX7C97+ykgMk4AEP+63tqgOKfkxbnrg7nmjLW+6OJ9ryprtDPyNImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmffFQW/4md8ffoi1P3B1PtOVNbfmb3B3fFSTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfO+eNnd8Unaov92dzzRlt/s7vgkbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzftCf1Rb3nR3fFdbtClImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmfaE/6u54oi1vuTve1Bb9GUHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDTvi5e1Rf+vLW9qi/5bW/4WQdK8IGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNO+Lh+4O/Zy744m2PHF3fFdbnrg7nmjLm+4O/bcgaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iad/0XkqYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvAPKA215092h/9eWJ+6Ot7Tlibvjiba86e54oi1P3B2fIkiaFyTNC5LmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuZ98bK745O05U13x5vujifa8l13xxN3h/6ctnxXkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzTug6Me05be6O97UljfdHU+05Ym744m2PHF3vCVImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNu/6LD3J3fJK2vOnueFNb3nJ3/GZtedPd8aa2fFeQNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTN++Khu+OJtnyStjxxdzzRlifa8sTd8Za7429yd7ypLU/cHU/cHd8VJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5gVJ867/Qn/M3fFEW564O76rLU/cHZ+kLU/cHU+05U13xxNt+a4gaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBpXpA0L0iad0DRj2nLE3fHE215y93xRFt+s7vjTW35FEHSvCBpXpA0L0iaFyTNC5LmBUnzgqR5QdK8IGlekDTvgPJAW/4md8cTbXni7nhTW36ru+OJtnySu+NNbfmuIGlekDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImvfFy+6OT9KW36wtv9Xd8aa744m2vKktT9wdT9wd3xUkzQuS5gVJ84KkeUHSvCBpXpA0L0iaFyTNC5LmBUnzvtCvcne8pS1P3B2fpC1vujueaMsTbXlLkDQvSJoXJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzftCf1Rbnrg73nJ3fJK2vOnu+CR3x1uCpHlB0rwgaV6QNC9ImhckzQuS5gVJ84KkeUHSvCBp3hcva4t+Tlvecne8qS1vujueaMsTd8cTd8enCJLmBUnzgqR5QdK8IGlekDQvSJoXJM0LkuYFSfOCpHkHFP2YtjxxdzzRlk9xd7ypLU/cHW9qy28VJM0LkuYFSfOCpHlB0rwgaV6QNC9ImhckzQuS5v0DzxHx73yJDcQAAAAASUVORK5CYII="
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
